# Process-Mining

./: .gitignore  LICENSE  Process Mining Refactor.md  README.md  boh.md  docker-compose.yml  pyproject.toml  test_etl.py
app/api/: routes_analytics.py  routes_connector.py  routes_dq.py  routes_mining.py  schemas.py
app/connectors/: hubspot.py  hubspot_client.py  hubspot_mapper.py
app/core/: config.py  database.py  logger.py  privacy.py
app/domain/: events.py
app/services/: etl_services.py
app/services/etl/: data_extraction.py  data_quality.py  data_transformation.py  etl_services.py  privacy_governance.py
app/services/mining/: conformance_service.py  discovery_service.py  kpi_service.py  mining_services.py
app/tasks/: base_task.py  dq_task.py  etl_task.py  integration_task.py  jobs.py  mining_task.py
app/tests/: test_mining.py
app/ui/: main.py
app/ui/pages/: dashboard_process.py  data_quality.py  predictive_insights.py  settings.py
data/: process_mining.db
data/raw/: dummy_deals.json
notebooks/: 02_pm4py_proto.ipynb
tests/: test_etl.py  test_mining.py  test_ui.py
