[project]
name = "process-mining"
version = "0.1.0"
description = "Currently [23/02/2026] a web-app ofr Process mining via CRM"
authors = [
    {name = "Francesco Scuderi",email = "frascuderi05@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.2.0,<8.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "pm4py (>=2.7.19.8,<3.0.0.0)",
    "taipy (>=4.1.1,<5.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (<=1.0.1)",
    "loguru (>=0.7.3,<0.8.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
