[tool.poetry]
name = "process-mining"
version = "0.1.0"
description = "Analisi Data-Driven per l'Ottimizzazione dei Flussi Aziendali"
authors = [
    "Francesco Scuderi <frascuderi05@gmail.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# CORE & PYTHON
python = "~3.12"
fastapi = "*"
uvicorn = "*"
pydantic-settings = "*"

# ASYNC & QUEUE
celery = "*"
redis = "*"

# DATA & MINING
polars = "*"
duckdb = "*"
pm4py = "*"

# FRONTEND
taipy = "*"
python-dotenv = "<=1.0.1"

# UTILS & API
requests = "*"
tenacity = "*"
loguru = "*"

[tool.poetry.group.dq.dependencies]
# DATA QUALITY & GOVERNANCE
pandera = {extras = ["polars"], version = "*"}
[tool.poetry.group.warehouse.dependencies]
# REVERSE ETL & DWH
sqlalchemy = ">=2.0.16,<=2.0.30"
pyarrow = "*"
[tool.poetry.group.ml.dependencies]
# PREDICTIVE ANALYTICS
scikit-learn = "*"
simpy = "^4.1.1"
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
[tool.poetry.group.dev.dependencies]
# TESTING & SVILUPPO
pytest = "*"
jupyter = "*"
ipykernel = "*"
ruff = "*"
